[tool.poetry]
name = "pyciot"
version = "0.1.0"
description = ""
authors = ["Peter Stanko <peter.stanko0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.4.1"
junitparser = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
